Contact us form
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@570 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
 
-	<display-name>Metabolights</display-name>
+	<display-name>MetaboLights</display-name>
 
     <!-- Location of the XML file that defines the root application context. Applied by ContextLoaderListener.-->
     <context-param>
