--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -172,6 +172,12 @@
 			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
+        <dependency>
+            <groupId>net.sourceforge.jwebunit</groupId>
+            <artifactId>jwebunit-htmlunit-plugin</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+        </dependency>		
 	</dependencies>
 
 </project>
