--- a/metabolights-webapps/src/test/resources/webapptest.properties
+++ b/metabolights-webapps/src/test/resources/webapptest.properties
@@ -8,9 +8,22 @@ jdbc.dialect=org.hibernate.dialect.OracleDialect
 # Where to start web tests from
 baseUrl=http://localhost:8080/metabolights/
 
+# Web pages
+aboutUrl  = about
+loginUrl  = login
+loginTextLabel = log in
+submitUrl = submit
+homeUrl   = home
+searchUrl = search
+
+# Logout
+logout = j_spring_security_logout
+logoutTextLabel = log out
+loggedOutSuccess = You have successfully logged out
+
 # Create new account
 newAccount=newAccount
-email=someone@somewhere.com
+email=khaug@yahoo.com
 firstName=firstname
 lastName=lastname
 password=password
@@ -22,7 +35,16 @@ urlTitleAfter=Account has been requested
 accountCreated=New account created
 
 #Search term for the searchForm
-searchTerm=rat
+searchTerm=Human
+checkBox1Name=organisms
+checkBox1value=Homo sapiens (Human)
+searchTerm2=Rattus
+checkBox2Name=technology
+checkBox2value=mass spectrometry
+searchTermFail=No results were found
+
+#Login form test
+loginSuccessUrl = login-success
 
 #Forgotten password form
 urlTitlePasswordBefore=MetaboLights password lost
