--- a/metabolights-webapps/src/test/resources/webapptest.properties
+++ b/metabolights-webapps/src/test/resources/webapptest.properties
@@ -15,11 +15,16 @@ loginTextLabel = log in
 submitUrl = submit
 homeUrl   = home
 searchUrl = search
+contactUrl = contact
+accountUrl = account
 
 # Logout
 logout = j_spring_security_logout
 logoutTextLabel = log out
 loggedOutSuccess = You have successfully logged out
+
+# Update Account
+accountUpdatedMessage=You have successfully updated your account
 
 # Create new account
 newAccount=newAccount
@@ -43,8 +48,9 @@ checkBox2Name=technology
 checkBox2value=mass spectrometry
 searchTermFail=No results were found
 
-#Login form test
-loginSuccessUrl = login-success
+#Contact Us form test
+contactMessage=This is a JWebUnit test message, please ignore
+messageSent=Message Sent
 
 #Forgotten password form
 urlTitlePasswordBefore=MetaboLights password lost
