git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@632 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/test/resources/webapptest.properties
+++ b/metabolights-webapps/src/test/resources/webapptest.properties
@@ -28,7 +28,7 @@ accountUpdatedMessage=You have successfully updated your account
 
 # Create new account
 newAccount=newAccount
-email=khaug@yahoo.com
+email=someone@somewhere.com
 firstName=firstname
 lastName=lastname
 password=password
