git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@638 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolightsutils/pom.xml
+++ b/metabolightsutils/pom.xml
@@ -5,23 +5,14 @@
   <parent>
     <artifactId>metabolights-main</artifactId>
     <groupId>uk.ac.ebi.metabolights</groupId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.3-SNAPSHOT</version>
   </parent>
   <groupId>uk.ac.ebi.metabolights</groupId>
   <artifactId>metabolights-utils</artifactId>
   <version>0.0.4-SNAPSHOT</version>
   <name>metabolightsutils</name>
-  <url>http://maven.apache.org</url>
+  <packaging>jar</packaging>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  <dependencies>
-    <dependency>
-    	<groupId>junit</groupId>
-    	<artifactId>junit</artifactId>
-    	<version>4.8.2</version>
-    	<type>jar</type>
-    	<scope>test</scope>
-    </dependency>
-  </dependencies>
 </project>
