git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@662 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/application.properties.template
+++ b/metabolights-webapps/src/main/webapp/resources/application.properties.template
@@ -5,6 +5,7 @@ ftpServerMainSubDir=upload
 ftpUser=CHANGE
 ftpPassword=CHANGE
 uploadDirectory=/nfs/production/panda/metabolights/isatab/upload
+publicFtpLocation=/ebi/ftp/pub/databases/metabolights/studies
 mtblAdminEmailAddress=admin@metabolights.com
 luceneIndexDirectory=/nfs/production/panda/metabolights/lucene/bii/
 luceneIndexDirectoryShort=/nfs/production/panda/metabolights/lucene
