--- a/metabolightsuploader/src/main/resources/isatabidreplacer.properties
+++ b/metabolightsuploader/src/main/resources/isatabidreplacer.properties
@@ -1,2 +1,4 @@
 isatab.ids=Study Identifier;Investigation Identifier
 isatab.filewithids=i_Investigation.txt
+isatab.publicReleaseDate=Study Public Release Date
+isatab.studySubDate=Study Submission Date
