--- a/metabolightsuploader/src/main/resources/isatabidreplacer.properties
+++ b/metabolightsuploader/src/main/resources/isatabidreplacer.properties
@@ -2,3 +2,5 @@ isatab.ids=Study Identifier;Investigation Identifier
 isatab.filewithids=i_Investigation.txt
 isatab.publicReleaseDate=Study Public Release Date
 isatab.studySubDate=Study Submission Date
+isatab.profilingType=Study Assay Measurement Type
+isatab.profilingValue=metabolite profiling
