--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.ebi.metabolights</groupId>
   <artifactId>metabolights-main</artifactId>
-  <version>0.0.3-SNAPSHOT</version>
+  <version>0.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>MetaboLights main project</name>
   <description>MetaboLights Main Project</description>
@@ -40,6 +40,7 @@
  		<artifactId>junit</artifactId>
  		<version>4.8.2</version>
  		<type>jar</type>
+ 		<scope>test</scope>
  	</dependency>    
  	<dependency>
  		<groupId>org.hibernate</groupId>
@@ -65,7 +66,7 @@
  	<dependency>
  		<groupId>log4j</groupId>
  		<artifactId>log4j</artifactId>
- 		<version>1.2.15</version>
+ 		<version>1.2.16</version>
  	 	<type>jar</type>	
  		<scope>compile</scope>
  	</dependency>	
