--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -131,19 +131,21 @@
 		<dependency>
 			<groupId>uk.ac.ebi.metabolights</groupId>
 			<artifactId>metabolights-utils</artifactId>
-			<version>0.0.4-SNAPSHOT</version>
+			<version>0.1.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>uk.ac.ebi.metabolights</groupId>
 			<artifactId>metabolights-uploader</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
+			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>uk.ac.ebi.metabolights</groupId>
 			<artifactId>metabolights-accessionmanager</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
+			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
