--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -171,6 +171,11 @@
             <type>jar</type>
             <scope>test</scope>
         </dependency>		
+        <dependency>
+  			<groupId>commons-httpclient</groupId>
+  			<artifactId>commons-httpclient</artifactId>
+  			<version>3.1</version>
+		</dependency>
 	</dependencies>
 
 </project>
