--- a/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
@@ -14,10 +14,24 @@
         </param-value>
     </context-param>
 
-    <!-- context-param>
-        <param-name>webAppRootKey</param-name>
-        <param-value>tutorial.root</param-value>
-    </context-param-->
+    <!-- Defines the base JNDI namespace used in $CATALINA_HOME/conf/Catalina/localhost/metabolights.xml files
+       See spring-servlet.xml for dataSource references -->
+    <resource-ref>
+        <description>DB Connection</description>
+        <res-ref-name>jdbc/metabolights</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+    
+    <filter>
+		<filter-name>HealthFilter</filter-name>
+		<filter-class>uk.ac.ebi.metabolights.es.HealthFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>HealthFilter</filter-name>
+		<url-pattern>/jmxproxy/*</url-pattern>
+	</filter-mapping> 
 
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
@@ -25,8 +39,8 @@
     </filter>
 
     <filter-mapping>
-      <filter-name>springSecurityFilterChain</filter-name>
-      <url-pattern>/*</url-pattern>
+      	<filter-name>springSecurityFilterChain</filter-name>
+      	<url-pattern>/*</url-pattern>
     </filter-mapping>
 
     <!--
@@ -64,11 +78,11 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
 
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
