EBI External services healthcheck class
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@833 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/application.properties.template
+++ b/metabolights-webapps/src/main/webapp/resources/application.properties.template
@@ -11,12 +11,13 @@ uploadDirectory=CHANGE
 publicFtpLocation=CHANGE
 privateFtpLocation=CHANGE
 
-mtblAdminEmailAddress=admin@metabolights.com
+mtblAdminEmailAddress=admin@email.com
 luceneIndexDirectory=CHANGE/bii/
 luceneIndexDirectoryShort=CHANGE
 
+# Only used for local testing
 jdbc.driverClassName=oracle.jdbc.OracleDriver
-jdbc.databaseurl=jdbc:oracle:thin:@CHANGE:1521:CHANGE
+jdbc.databaseurl=jdbc:oracle:thin:@HOST:PORT:SID
 jdbc.username=CHANGE
 jdbc.password=CHANGE
 jdbc.dialect=org.hibernate.dialect.OracleDialect
