git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@835 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
@@ -13,15 +13,6 @@
             /WEB-INF/spring-servlet.xml
         </param-value>
     </context-param>
-
-    <!-- Defines the base JNDI namespace used in $CATALINA_HOME/conf/Catalina/localhost/metabolights.xml files
-       See spring-servlet.xml for dataSource references -->
-    <resource-ref>
-        <description>DB Connection</description>
-        <res-ref-name>jdbc/metabolights</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
-        <res-auth>Container</res-auth>
-    </resource-ref>
     
     <filter>
 		<filter-name>HealthFilter</filter-name>
@@ -88,5 +79,15 @@
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
+    <resource-ref>
+        <res-ref-name>jdbc/metabolights/prod</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 
+    <resource-ref>
+        <res-ref-name>jdbc/metabolights/dev</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 </web-app>
