--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<artifactId>metabolights-main</artifactId>
 		<groupId>uk.ac.ebi.metabolights</groupId>
-		<version>0.1.1-SNAPSHOT</version>
+		<version>0.2-SNAPSHOT</version>
 	</parent>
 	<groupId>uk.ac.ebi.metabolights</groupId>
 	<artifactId>metabolights-webapp</artifactId>
-	<version>0.1.1-SNAPSHOT</version>
+	<version>0.2-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>metabolights-webapp</name>
 	<description>MetaboLights Web Application</description>
@@ -175,6 +175,11 @@
 			<artifactId>ISAtools-import-deps-FORK</artifactId>
 			<version>1.2.1.11</version>
 			<type>jar</type>
+			<!-- 			
+			<groupId>org.isatools</groupId>
+			<artifactId>import_layer_FORK</artifactId>
+			<version>1.3.2-SNAPSHOT</version> 
+			-->
 			<exclusions>
 				<exclusion>
 					<artifactId>hibernate-core</artifactId>
