Switched to the the development database
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@910 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/application.properties
+++ b/metabolights-webapps/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #URL for new account creations, this is included in the emails sent
 urlConfirmNewAccount=http://wwwdev.ebi.ac.uk/metabolights/confirmAccountRequest
 urlActivateNewAccount=http://wwwdev.ebi.ac.uk/metabolights/activateAccount__NotifyUser
-#urlConfirmNewAccount=http://wwwdev.ebi.ac.uk/metabolights-dev/confirmAccountRequest
-#urlActivateNewAccount=http://wwwdev.ebi.ac.uk/metabolights-dev/activateAccount__NotifyUser
+#urlConfirmNewAccount=http://www.ebi.ac.uk/metabolights/confirmAccountRequest
+#urlActivateNewAccount=http://www.ebi.ac.uk/metabolights/activateAccount__NotifyUser
 
 # uploadDirectory is used the by the metabolights-uploader module, for BII submissions
 uploadDirectory= /nfs/production/panda/metabolights/isatab/upload/
@@ -11,10 +11,10 @@ publicFtpLocation=/ebi/ftp/pub/databases/metabolights/studies/public/
 privateFtpLocation=/ebi/ftp/pub/databases/metabolights/studies/private/
 
 mtblAdminEmailAddress=metabolights-help@ebi.ac.uk
-luceneIndexDirectory= /nfs/production/panda/metabolights/lucene/prod/bii/
-luceneIndexDirectoryShort= /nfs/production/panda/metabolights/lucene/prod/
-#luceneIndexDirectory= /nfs/production/panda/metabolights/lucene/dev/bii/
-#luceneIndexDirectoryShort= /nfs/production/panda/metabolights/lucene/dev/
+#luceneIndexDirectory= /nfs/production/panda/metabolights/lucene/prod/bii/
+#luceneIndexDirectoryShort= /nfs/production/panda/metabolights/lucene/prod/
+luceneIndexDirectory= /nfs/production/panda/metabolights/lucene/dev/bii/
+luceneIndexDirectoryShort= /nfs/production/panda/metabolights/lucene/dev/
 
 # Settings for ISAtab load/replacement.  Should not change this
 isatab.ids=Study Identifier;Investigation Identifier
@@ -23,6 +23,4 @@ isatab.publicReleaseDate=Study Public Release Date
 isatab.studySubDate=Study Submission Date
 isatab.profilingType=Study Assay Measurement Type
 isatab.profilingValue=metabolite profiling
-
-
 
