Added classpath to maven war plugin.  New folder structure for production tomcats
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@915 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/application.properties
+++ b/metabolights-webapps/src/main/resources/application.properties
@@ -6,6 +6,7 @@ urlActivateNewAccount=http://wwwdev.ebi.ac.uk/metabolights/activateAccount__Noti
 
 # uploadDirectory is used the by the metabolights-uploader module, for BII submissions
 uploadDirectory= /nfs/production/panda/metabolights/isatab/upload/
+#uploadDirectory= /net/isilonP/public/rw/homes/tc_cm01/upload
 # ftp locations are used by the metabolights-uploader and metabolights-webapp to distibute submitted archives
 publicFtpLocation=/ebi/ftp/pub/databases/metabolights/studies/public/
 privateFtpLocation=/ebi/ftp/pub/databases/metabolights/studies/private/
@@ -13,8 +14,8 @@ privateFtpLocation=/ebi/ftp/pub/databases/metabolights/studies/private/
 mtblAdminEmailAddress=metabolights-help@ebi.ac.uk
 #luceneIndexDirectory= /nfs/production/panda/metabolights/lucene/prod/bii/
 #luceneIndexDirectoryShort= /nfs/production/panda/metabolights/lucene/prod/
-luceneIndexDirectory= /nfs/production/panda/metabolights/lucene/dev/bii/
-luceneIndexDirectoryShort= /nfs/production/panda/metabolights/lucene/dev/
+luceneIndexDirectory= /net/isilonP/public/rw/homes/tc_cm01/lucene/bii/
+luceneIndexDirectoryShort= /net/isilonP/public/rw/homes/tc_cm01/lucene/
 
 # Settings for ISAtab load/replacement.  Should not change this
 isatab.ids=Study Identifier;Investigation Identifier
