--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -19,6 +19,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
