--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>uk.ac.ebi.metabolights</groupId>
 	<artifactId>metabolights-webapp</artifactId>
-	<version>0.3-SNAPSHOT</version>
+	<version>0.4-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>metabolights-webapp</name>
 	<description>MetaboLights Web Application</description>
@@ -179,7 +179,7 @@
         </dependency>
 		<dependency>
         	<groupId>org.isatools</groupId>
-        	<artifactId>ISAtools-import-deps-MTBLS</artifactId>
+        	<artifactId>import_layer_MTBLS</artifactId>
         	<version>1.3.2.2-SNAPSHOT</version>
         	<type>jar</type>
 			<exclusions>
