Lucene search fix
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@932 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -179,8 +179,8 @@
         </dependency>
 		<dependency>
         	<groupId>org.isatools</groupId>
-        	<artifactId>import_layer_MTBLS</artifactId>
-        	<version>1.3.2.2-SNAPSHOT</version>
+        	<artifactId>ISAtools-import-deps-MTBLS</artifactId>
+        	<version>1.3.2.3-SNAPSHOT</version>
         	<type>jar</type>
 			<exclusions>
 				<exclusion>
