--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -178,20 +178,11 @@
         	<scope>compile</scope>
         </dependency>
 		<dependency>
-        	<groupId>org.isatools</groupId>
-        	<artifactId>ISAtools-import-deps-MTBLS</artifactId>
-        	<version>1.3.2.5-SNAPSHOT</version>
-        	<type>jar</type>
-			<exclusions>
-				<exclusion>
-					<artifactId>hibernate-core</artifactId>
-					<groupId>org.hibernate</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>lucene-core</artifactId>
-					<groupId>org.apache.lucene</groupId>
-				</exclusion>
-			</exclusions>			
+			<groupId>org.isatools</groupId>
+			<artifactId>import_layer_MTBLS</artifactId>
+			<version>1.3.2.6-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
