New download page for the plugin
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@954 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/log4j.properties
+++ b/metabolights-webapps/src/main/resources/log4j.properties
@@ -36,7 +36,7 @@ log4j.appender.ConsoleApp.threshold=INFO
 log4j.appender.FixedFileApp=org.apache.log4j.FileAppender
 log4j.appender.FixedFileApp.layout=org.apache.log4j.PatternLayout
 log4j.appender.FixedFileApp.layout.ConversionPattern=%d {%x} [%-5p] (%C{1},%L): %m%n
-log4j.appender.FixedFileApp.File=isatools.log
+log4j.appender.FixedFileApp.File=${catalina.base}/logs/isatools.log
 log4j.appender.FixedFileApp.Append=false
 log4j.appender.FixedFileApp.BufferedIO=false
 log4j.appender.FixedFileApp.BufferSize=1024
