--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.ebi.metabolights</groupId>
   <artifactId>metabolights-main</artifactId>
-  <version>0.2-SNAPSHOT</version>
+  <version>0.3-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>MetaboLights main project</name>
   <description>MetaboLights Main Project</description>
@@ -22,7 +22,7 @@
   
   <!-- Shared version number properties -->
   <properties>
-    <org.spring.version>3.1.0.M2</org.spring.version>
+  	<org.spring.version>3.1.0.RELEASE</org.spring.version>
   </properties>
   
   <dependencies>
@@ -117,7 +117,7 @@
       <dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-core</artifactId>
-        <version>3.1.0.RC1</version>
+        <version>${org.spring.version}</version>
     </dependency>
 
  	<dependency>
@@ -151,7 +151,7 @@
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-webmvc</artifactId>
- 		<version>3.0.5.RELEASE</version>
+ 		<version>${org.spring.version}</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
@@ -176,12 +176,18 @@
     </site>
   </distributionManagement>  
   
-  <!--  Additional repositories for Spring milestone builds, remove when 3.1 is production -->
-  <repositories>
-     <repository>
-        <id>Springframework milestone</id>
-        <url>http://maven.springframework.org/milestone</url>
-     </repository>   
-  </repositories>  
+    <repositories>
+  		<repository>
+		    <id>springsource-repo</id>
+		    <name>SpringSource Repository</name>
+		    <url>http://repo.springsource.org/release</url>
+		</repository>
+ 
+  		<repository>
+        	<id>Springframework milestone</id>
+        	<url>http://maven.springframework.org/milestone</url>
+  		</repository> 
+  
+  	</repositories>  
   
 </project>
