--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>metabolights-main</artifactId>
 		<groupId>uk.ac.ebi.metabolights</groupId>
-		<version>0.2-SNAPSHOT</version>
+		<version>0.3-SNAPSHOT</version>
 	</parent>
 	<groupId>uk.ac.ebi.metabolights</groupId>
 	<artifactId>metabolights-webapp</artifactId>
@@ -12,6 +12,15 @@
 	<packaging>war</packaging>
 	<name>metabolights-webapp</name>
 	<description>MetaboLights Web Application</description>
+
+    <properties>
+        <project.build.sourceEncoding>
+            UTF-8
+        </project.build.sourceEncoding>
+        <project.reporting.outputEncoding>
+            UTF-8
+        </project.reporting.outputEncoding>
+    </properties>
 
 	<build>
 		<plugins>
@@ -27,6 +36,13 @@
                     </archive>
                 </configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -187,7 +203,7 @@
 		<dependency>
 			<groupId>org.isatools</groupId>
 			<artifactId>import_layer_MTBLS</artifactId>
-			<version>1.3.2.7-SNAPSHOT</version>
+			<version>1.3.2.8-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
