--- a/metabolights-webapps/src/main/resources/application.properties
+++ b/metabolights-webapps/src/main/resources/application.properties
@@ -7,9 +7,12 @@ urlActivateNewAccount=http://wwwdev.ebi.ac.uk/metabolights/activateAccount__Noti
 # uploadDirectory is used the by the metabolights-uploader module, for BII submissions
 uploadDirectory= /nfs/production/panda/metabolights/isatab/upload/
 #uploadDirectory= /net/isilonP/public/rw/homes/tc_cm01/upload
+
 # ftp locations are used by the metabolights-uploader and metabolights-webapp to distibute submitted archives
 publicFtpLocation=/ebi/ftp/pub/databases/metabolights/studies/public/
 privateFtpLocation=/ebi/ftp/pub/databases/metabolights/studies/private/
+#publicFtpLocation=/net/nasP/ftp_public/databases/metabolights/studies/public/
+#privateFtpLocation=/net/nasP/ftp_public/databases/metabolights/studies/private/
 
 mtblAdminEmailAddress=metabolights-help@ebi.ac.uk
 luceneIndexDirectory= /nfs/production/panda/metabolights/lucene/dev/bii/
