--- a/metabolights-webapps/src/main/resources/application.properties
+++ b/metabolights-webapps/src/main/resources/application.properties
@@ -15,6 +15,8 @@ privateFtpLocation=/ebi/ftp/pub/databases/metabolights/studies/private/
 # USE /net/isilonP/public/rw/homes/tc_cm01/studies until we have read-write access to the public ftp site
 publicFtpStageLocation=/net/isilonP/public/rw/homes/tc_cm01/studies/public/
 privateFtpStageLocation=/net/isilonP/public/rw/homes/tc_cm01/studies/private/
+#publicFtpStageLocation=/nfs/production/panda/metabolights/isatab/ftp_stage/public
+#privateFtpStageLocation=/nfs/production/panda/metabolights/isatab/ftp_stage/private
 #publicFtpLocation=/net/nasP/ftp_public/databases/metabolights/studies/public/
 #privateFtpLocation=/net/nasP/ftp_public/databases/metabolights/studies/private/
 
