--- a/metabolights-webapps/src/main/resources/application.properties
+++ b/metabolights-webapps/src/main/resources/application.properties
@@ -11,20 +11,22 @@ uploadDirectory= /net/isilonP/public/rw/homes/tc_cm01/upload
 # ftp locations are used by the metabolights-uploader and metabolights-webapp to distibute submitted archives
 publicFtpLocation=/ebi/ftp/pub/databases/metabolights/studies/public/
 privateFtpLocation=/ebi/ftp/pub/databases/metabolights/studies/private/
+#publicFtpLocation=/net/nasP/ftp_public/databases/metabolights/studies/public/
+#privateFtpLocation=/net/nasP/ftp_public/databases/metabolights/studies/private/
 
 # USE /net/isilonP/public/rw/homes/tc_cm01/studies until we have read-write access to the public ftp site
 publicFtpStageLocation=/net/isilonP/public/rw/homes/tc_cm01/studies/public/
 privateFtpStageLocation=/net/isilonP/public/rw/homes/tc_cm01/studies/private/
 #publicFtpStageLocation=/nfs/production/panda/metabolights/isatab/ftp_stage/public
 #privateFtpStageLocation=/nfs/production/panda/metabolights/isatab/ftp_stage/private
-#publicFtpLocation=/net/nasP/ftp_public/databases/metabolights/studies/public/
-#privateFtpLocation=/net/nasP/ftp_public/databases/metabolights/studies/private/
 
 mtblAdminEmailAddress=metabolights-help@ebi.ac.uk
 #luceneIndexDirectory= /nfs/production/panda/metabolights/lucene/dev/bii/
 #luceneIndexDirectoryShort= /nfs/production/panda/metabolights/lucene/dev
-luceneIndexDirectory= /net/isilonP/public/rw/homes/tc_cm01/lucene/bii/
-luceneIndexDirectoryShort= /net/isilonP/public/rw/homes/tc_cm01/lucene/
+luceneIndexDirectory= /net/isilonP/public/rw/homes/tc_cm01/lucene/dev/bii/
+luceneIndexDirectoryShort= /net/isilonP/public/rw/homes/tc_cm01/lucene/dev/
+#luceneIndexDirectory= /net/isilonP/public/rw/homes/tc_cm01/lucene/prod/bii/
+#luceneIndexDirectoryShort= /net/isilonP/public/rw/homes/tc_cm01/lucene/prod/
 
 # Settings for ISAtab load/replacement.  Should not change this
 isatab.ids=Study Identifier;Investigation Identifier
