--- a/metabolights-webapps/src/main/resources/application.properties
+++ b/metabolights-webapps/src/main/resources/application.properties
@@ -14,7 +14,7 @@ privateFtpLocation=/ebi/ftp/pub/databases/metabolights/studies/private/
 #publicFtpLocation=/net/nasP/ftp_public/databases/metabolights/studies/public/
 #privateFtpLocation=/net/nasP/ftp_public/databases/metabolights/studies/private/
 
-# USE /net/isilonP/public/rw/homes/tc_cm01/studies until we have read-write access to the public ftp site
+# USE /net/isilonP/public/rw/homes/tc_cm01/.. until we have read-write access to the public ftp site
 publicFtpStageLocation=/net/isilonP/public/rw/homes/tc_cm01/studies/public/
 privateFtpStageLocation=/net/isilonP/public/rw/homes/tc_cm01/studies/private/
 #publicFtpStageLocation=/nfs/production/panda/metabolights/isatab/ftp_stage/public
@@ -23,10 +23,10 @@ privateFtpStageLocation=/net/isilonP/public/rw/homes/tc_cm01/studies/private/
 mtblAdminEmailAddress=metabolights-help@ebi.ac.uk
 #luceneIndexDirectory= /nfs/production/panda/metabolights/lucene/dev/bii/
 #luceneIndexDirectoryShort= /nfs/production/panda/metabolights/lucene/dev
-luceneIndexDirectory= /net/isilonP/public/rw/homes/tc_cm01/lucene/dev/bii/
-luceneIndexDirectoryShort= /net/isilonP/public/rw/homes/tc_cm01/lucene/dev/
-#luceneIndexDirectory= /net/isilonP/public/rw/homes/tc_cm01/lucene/prod/bii/
-#luceneIndexDirectoryShort= /net/isilonP/public/rw/homes/tc_cm01/lucene/prod/
+#luceneIndexDirectory= /net/isilonP/public/rw/homes/tc_cm01/lucene/dev/bii/
+#luceneIndexDirectoryShort= /net/isilonP/public/rw/homes/tc_cm01/lucene/dev/
+luceneIndexDirectory= /net/isilonP/public/rw/homes/tc_cm01/lucene/prod/bii/
+luceneIndexDirectoryShort= /net/isilonP/public/rw/homes/tc_cm01/lucene/prod/
 
 # Settings for ISAtab load/replacement.  Should not change this
 isatab.ids=Study Identifier;Investigation Identifier
