--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>uk.ac.ebi.metabolights</groupId>
 	<artifactId>metabolights-webapp</artifactId>
-	<version>0.5-SNAPSHOT</version>
+	<version>0.6-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>metabolights-webapp</name>
 	<description>MetaboLights Web Application</description>
@@ -203,7 +203,7 @@
 		<dependency>
 			<groupId>org.isatools</groupId>
 			<artifactId>import_layer_MTBLS</artifactId>
-			<version>1.3.2.8-SNAPSHOT</version>
+			<version>1.3.2.9-P-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
