quartz-scheduler for app cron jobs added. Emails are sent before when studies are going public
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1023 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/log4j.properties
+++ b/metabolights-webapps/src/main/resources/log4j.properties
@@ -54,7 +54,7 @@ log4j.appender.FileApp=org.apache.log4j.FileAppender
 log4j.appender.FileApp.layout=org.apache.log4j.PatternLayout
 log4j.appender.FileApp.layout.ConversionPattern=%d {%x} [%-5p] (%C{1},%L): %m%n
 # This is usually replaced by a default parameter, or by something specified by the user
-log4j.appender.FileApp.File=import_layer.log
+log4j.appender.FileApp.File=${catalina.base}/logs/isatools.log
 log4j.appender.FileApp.Append=false
 log4j.appender.FileApp.BufferedIO=false
 log4j.appender.FileApp.BufferSize=1024
