--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>uk.ac.ebi.metabolights</groupId>
 	<artifactId>metabolights-webapp</artifactId>
-	<version>0.6-SNAPSHOT</version>
+	<version>0.7-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>metabolights-webapp</name>
 	<description>MetaboLights Web Application</description>
@@ -204,6 +204,13 @@
 			<groupId>org.isatools</groupId>
 			<artifactId>import_layer_MTBLS</artifactId>
 			<version>1.3.2.11-P-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>1.8.5</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
