--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -12,15 +12,13 @@
 	<packaging>war</packaging>
 	<name>metabolights-webapp</name>
 	<description>MetaboLights Web Application</description>
+	
 
-    <properties>
-        <project.build.sourceEncoding>
-            UTF-8
-        </project.build.sourceEncoding>
-        <project.reporting.outputEncoding>
-            UTF-8
-        </project.reporting.outputEncoding>
-    </properties>
+	<properties>
+        	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+	
 
 	<build>
 		<plugins>
@@ -28,23 +26,25 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                        </manifest>
-                    </archive>
-                </configuration>
+                		<configuration>
+                    			<archive>
+                        			<manifest>
+                            				<addClasspath>true</addClasspath>
+                        			</manifest>
+                    			</archive>
+                		</configuration>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
+			<plugin>
+                		<groupId>org.apache.maven.plugins</groupId>
+                		<artifactId>maven-compiler-plugin</artifactId>
+                		<configuration>
+                    			<encoding>UTF-8</encoding>
+                		</configuration>
+            		</plugin>
 		</plugins>
 	</build>
+	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
@@ -74,13 +74,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
-            <version>1.3</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
+        	<dependency>
+            		<groupId>org.apache.commons</groupId>
+            		<artifactId>commons-compress</artifactId>
+            		<version>1.3</version>
+            		<type>jar</type>
+            		<scope>compile</scope>
+        	</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -174,36 +174,36 @@
 			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
-        <dependency>
-            <groupId>net.sourceforge.jwebunit</groupId>
-            <artifactId>jwebunit-htmlunit-plugin</artifactId>
-            <version>2.5</version>
-            <type>jar</type>
-            <scope>test</scope>
-        </dependency>		
-        <dependency>
+		<dependency>
+			<groupId>net.sourceforge.jwebunit</groupId>
+			<artifactId>jwebunit-htmlunit-plugin</artifactId>
+			<version>2.5</version>
+			<type>jar</type>
+			 <scope>test</scope>
+		</dependency>
+		 <dependency>
   			<groupId>commons-httpclient</groupId>
   			<artifactId>commons-httpclient</artifactId>
   			<version>3.1</version>
 		</dependency>
-        <dependency>
-        	<groupId>org.slf4j</groupId>
-        	<artifactId>slf4j-simple</artifactId>
-        	<version>1.6.2</version>
-        	<type>jar</type>
-        	<scope>compile</scope>
-        </dependency>
-        <dependency>
-        	<groupId>javassist</groupId>
-        	<artifactId>javassist</artifactId>
-        	<version>3.12.1.GA</version>
-        	<type>jar</type>
-        	<scope>compile</scope>
-        </dependency>
+		<dependency>
+        		<groupId>org.slf4j</groupId>
+        		<artifactId>slf4j-simple</artifactId>
+        		<version>1.6.2</version>
+        		<type>jar</type>
+        		<scope>compile</scope>
+        	</dependency>
+        	<dependency>
+        		<groupId>javassist</groupId>
+        		<artifactId>javassist</artifactId>
+        		<version>3.12.1.GA</version>
+        		<type>jar</type>
+        		<scope>compile</scope>
+        	</dependency>
 		<dependency>
 			<groupId>org.isatools</groupId>
 			<artifactId>import_layer_MTBLS</artifactId>
-			<version>1.3.2.11-P-SNAPSHOT</version>
+			<version>1.3.2.27-P-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -215,5 +215,4 @@
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
-
 </project>
