--- a/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
@@ -80,14 +80,9 @@
     </welcome-file-list>
 
     <resource-ref>
-        <res-ref-name>jdbc/metabolights/prod</res-ref-name>
+        <res-ref-name>jdbc/metabolights</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
 
-    <resource-ref>
-        <res-ref-name>jdbc/metabolights/dev</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
-        <res-auth>Container</res-auth>
-    </resource-ref>
 </web-app>
