--- a/metabolights-webapps/src/main/resources/application.properties
+++ b/metabolights-webapps/src/main/resources/application.properties
@@ -28,6 +28,7 @@
 #luceneIndexDirectoryShort= /net/isilonP/public/rw/homes/tc_cm01/lucene/prod/
 
 mtblAdminEmailAddress=metabolights-help@ebi.ac.uk
+mtblDevEmailAddress=metabolights-dev@ebi.ac.uk
 
 # Settings for ISAtab load/replacement.  Should not change this
 isatab.ids=Study Identifier;Investigation Identifier
