--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>uk.ac.ebi.metabolights</groupId>
 	<artifactId>metabolights-webapp</artifactId>
-	<version>0.81-SNAPSHOT</version>
+	<version>0.82-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>metabolights-webapp</name>
 	<description>MetaboLights Web Application</description>
@@ -214,5 +214,10 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+        <dependency>
+            <groupId>uk.ac.ebi</groupId>
+            <artifactId>ebinocle</artifactId>
+            <version>1.0.4</version>
+        </dependency>
 	</dependencies>
 </project>
