--- a/metabolights-webapps/src/main/resources/application.properties
+++ b/metabolights-webapps/src/main/resources/application.properties
@@ -1,34 +1,6 @@
-#URL for new account creations, this is included in the emails sent
-#urlConfirmNewAccount=http://wwwdev.ebi.ac.uk/metabolights/confirmAccountRequest
-#urlActivateNewAccount=http://wwwdev.ebi.ac.uk/metabolights/activateAccount__NotifyUser
-#urlConfirmNewAccount=http://www.ebi.ac.uk/metabolights/confirmAccountRequest
-#urlActivateNewAccount=http://www.ebi.ac.uk/metabolights/activateAccount__NotifyUser
-
-# uploadDirectory is used the by the metabolights-uploader module, for BII submissions
-#uploadDirectory= /nfs/production/panda/metabolights/isatab/upload/
-#uploadDirectory= /net/isilonP/public/rw/homes/tc_cm01/upload
-
-# ftp locations are used by the metabolights-uploader and metabolights-webapp to distibute submitted archives
-#publicFtpLocation=/ebi/ftp/pub/databases/metabolights/studies/public/
-#privateFtpLocation=/ebi/ftp/pub/databases/metabolights/studies/private/
-#publicFtpLocation=/net/nasP/ftp_public/databases/metabolights/studies/public/
-#privateFtpLocation=/net/nasP/ftp_public/databases/metabolights/studies/private/
-
-# USE /net/isilonP/public/rw/homes/tc_cm01/.. until we have read-write access to the public ftp site
-#publicFtpStageLocation=/net/isilonP/public/rw/homes/tc_cm01/studies/public/
-#privateFtpStageLocation=/net/isilonP/public/rw/homes/tc_cm01/studies/private/
-#publicFtpStageLocation=/nfs/production/panda/metabolights/isatab/ftp_stage/public/
-#privateFtpStageLocation=/nfs/production/panda/metabolights/isatab/ftp_stage/private/
-
-#luceneIndexDirectory= /nfs/production/panda/metabolights/lucene/dev/bii/
-#luceneIndexDirectoryShort= /nfs/production/panda/metabolights/lucene/dev/
-#luceneIndexDirectory= /net/isilonP/public/rw/homes/tc_cm01/lucene/dev/bii/
-#luceneIndexDirectoryShort= /net/isilonP/public/rw/homes/tc_cm01/lucene/dev/
-#luceneIndexDirectory= /net/isilonP/public/rw/homes/tc_cm01/lucene/prod/bii/
-#luceneIndexDirectoryShort= /net/isilonP/public/rw/homes/tc_cm01/lucene/prod/
-
 mtblAdminEmailAddress=metabolights-help@ebi.ac.uk
 mtblDevEmailAddress=metabolights-dev@ebi.ac.uk
+replyTo=no-reply@ebi.ac.uk
 
 # Settings for ISAtab load/replacement.  Should not change this
 isatab.ids=Study Identifier;Investigation Identifier
@@ -37,4 +9,5 @@ isatab.publicReleaseDate=Study Public Release Date
 isatab.studySubDate=Study Submission Date
 isatab.profilingType=Study Assay Measurement Type
 isatab.profilingValue=metabolite profiling
+luceneIndexDirectoryShort=Create Property
 
