--- a/metabolights-webapps/src/main/resources/application.properties.template
+++ b/metabolights-webapps/src/main/resources/application.properties.template
@@ -1,16 +1,6 @@
-#URL for new account creations, this is included in the emails sent
-urlConfirmNewAccount=http://wwwdev.ebi.ac.uk/mtbl_bii/confirmAccountRequest
-urlActivateNewAccount=http://wwwdev.ebi.ac.uk/mtbl_bii/activateAccount__NotifyUser
-
-# uploadDirectory is used the by the metabolights-uploader module, for BII submissions
-uploadDirectory=CHANGE
-# ftp locations are used by the metabolights-uploader and metabolights-webapp to distibute submitted archives
-publicFtpLocation=CHANGE
-privateFtpLocation=CHANGE
-
-mtblAdminEmailAddress=admin@email.com
-luceneIndexDirectory=CHANGE/bii/
-luceneIndexDirectoryShort=CHANGE
+mtblAdminEmailAddress=<YOUR EMAIL ADDRESS>
+mtblDevEmailAddress=<YOUR EMAIL ADDRESS>
+replyTo=<YOUR REPLY TO EMAIL ADDRESS>
 
 # Settings for ISAtab load/replacement.  Should not change this
 isatab.ids=Study Identifier;Investigation Identifier
