--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>uk.ac.ebi.metabolights</groupId>
 	<artifactId>metabolights-webapp</artifactId>
-	<version>0.83-SNAPSHOT</version>
+	<version>0.9</version>
 	<packaging>war</packaging>
 	<name>metabolights-webapp</name>
 	<description>MetaboLights Web Application</description>
@@ -219,5 +219,5 @@
             <artifactId>ebinocle</artifactId>
             <version>1.0.4</version>
         </dependency>
-	</dependencies>
+    </dependencies>
 </project>
