--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -203,7 +203,7 @@
 		<dependency>
 			<groupId>org.isatools</groupId>
 			<artifactId>import_layer_MTBLS</artifactId>
-			<version>1.3.2.29-P-SNAPSHOT</version>
+			<version>1.3.2.32-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -219,5 +219,26 @@
             <artifactId>ebinocle</artifactId>
             <version>1.0.4</version>
         </dependency>
-    </dependencies>
+        <dependency>
+        	<groupId>uk.ac.ebi.biobabel</groupId>
+        	<artifactId>ebeye-client</artifactId>
+        	<version>2.0.0</version>
+        </dependency>
+        <dependency>
+        	<groupId>uk.ac.ebi.chebi.webapps.chebiWS.client</groupId>
+        	<artifactId>chebiWS-client</artifactId>
+        	<version>2.0</version>
+        </dependency>
+        <dependency>
+        	<groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
+        	<artifactId>dao</artifactId>
+        	<version>0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        	<groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
+        	<artifactId>domain</artifactId>
+        	<version>0.1-SNAPSHOT</version>
+        </dependency>
+	</dependencies>
+
 </project>
