--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -203,7 +203,7 @@
 		<dependency>
 			<groupId>org.isatools</groupId>
 			<artifactId>import_layer_MTBLS</artifactId>
-			<version>1.3.2.32-SNAPSHOT</version>
+			<version>1.3.2.29-P-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
