--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -232,6 +232,11 @@
         	<artifactId>domain</artifactId>
         	<version>0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+        	<groupId>uk.ac.ebi.pride.web</groupId>
+        	<artifactId>pride-web-utils</artifactId>
+        	<version>1.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 
 </project>
