--- a/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,15 @@
 		<filter-name>HealthFilter</filter-name>
 		<url-pattern>/jmxproxy/*</url-pattern>
 	</filter-mapping> 
+	
+	<filter>
+        <filter-name>frontierTemplateReferenceLayerFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+	<filter-mapping>
+        <filter-name>frontierTemplateReferenceLayerFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
